syntax = "proto3";
package DouDizhu;

option go_package = "network/protodef";
option csharp_namespace = "Network.Proto";

message PVector3 {
    float x = 1;
    float y = 2;
    float z = 3;
}

message PCharacterMove {
    float moveX = 1;
}

message PCharacterState {
    PVector3 position = 1;
}